--- a/frontend/nixpacks.toml
+++ b/frontend/nixpacks.toml
@@ -1,3 +1,6 @@
+[providers]
+node = "18"
+
 [phases.setup]
 nixPkgs = ["nodejs-18_x"]
 
@@ -8,4 +11,4 @@ cmds = ["npm install"]
 cmds = ["npm run build"]
 
 [start]
-cmd = "npm run preview"
+cmd = "node_modules/.bin/vite preview --host 0.0.0.0 --port ${PORT:-4173}"
