--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,9 @@
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
-# Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:3000
+# Frontend URL (for CORS - set this to your Render frontend URL)
+FRONTEND_URL=https://webtools-frontend.onrender.com
 
 # API Keys (if needed)
 # STRIPE_SECRET_KEY=your_stripe_key_here
