--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview --host 0.0.0.0",
-    "start": "serve -s dist -l ${PORT:-4173}"
+    "preview": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -20,8 +19,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0",
-    "serve": "^14.2.1"
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
