--- a/render.yaml
+++ b/render.yaml
@@ -14,4 +14,4 @@ services:
         value: production
       - key: FRONTEND_URL
         sync: false
-    healthCheckPath: /
+    healthCheckPath: /health
