--- a/render.yaml
+++ b/render.yaml
@@ -15,3 +15,23 @@ services:
       - key: FRONTEND_URL
         sync: false
     healthCheckPath: /health
+
+  # Frontend Static Site
+  - type: web
+    name: webtools-frontend
+    runtime: static
+    region: oregon
+    plan: free
+    branch: main
+    buildCommand: cd frontend && npm install && npm run build
+    staticPublishPath: frontend/dist
+    envVars:
+      - key: VITE_API_URL
+        fromService:
+          type: web
+          name: webtools-backend
+          envVarKey: RENDER_EXTERNAL_URL
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
